[package]
name = "dset"
version = "0.1.6"
edition = "2024"
license = "MIT"
description = "A Rust library for processing and managing dataset-related files, with a focus on machine learning datasets, captions, and safetensors files"
repository = "https://github.com/rakki194/dset"
homepage = "https://github.com/rakki194/dset"
documentation = "https://docs.rs/dset"

[dependencies]
xio = { version = "0.1.7" }
anyhow = { version = "1.0.96", features = ["backtrace"] }
safetensors = "0.5.2"
memmap2 = "0.9.5"
serde_json = "1.0.139"
tokio = { version = "1.43.0", features = ["full"] }
log = "0.4.26"

[lib]
name = "dset"
path = "src/lib.rs"

[dev-dependencies]
tempfile = "3.17.1"
tokio = { version = "1.43.0", features = ["full", "test-util"] }
serde_json = "1.0.139"
