[package]
name = "dset"
version = "0.1.11"
edition = "2024"
license = "MIT"
description = "A Rust library for processing and managing dataset-related files, with a focus on machine learning datasets, captions, and safetensors files"
repository = "https://github.com/rakki194/dset"
homepage = "https://github.com/rakki194/dset"
documentation = "https://docs.rs/dset"

[dependencies]
xio = { version = "0.1.9" }
anyhow = { version = "1.0.97", features = ["backtrace"] }
safetensors = "0.5.3"
memmap2 = "0.9.5"
serde_json = "1.0.140"
tokio = { version = "1.44.1", features = ["full"] }
log = "0.4.26"
fancy-regex = "0.14.0"
serde = { version = "1.0.219", features = ["derive"] }
md5 = "0.7.0"

[lib]
name = "dset"
path = "src/lib.rs"

[dev-dependencies]
tempfile = "3.19.0"
tokio = { version = "1.44.1", features = ["full", "test-util"] }
serde_json = "1.0.140"
env_logger = "0.11.7"
